# PersonLeading

./: .gitmodules  LICENSE  README.md
src/back_perception/: CMakeLists.txt  package.xml
src/back_perception/launch/: cam.launch
src/back_perception/scripts/: b_eyes.py  main.py  navigation.py  speak.py
src/bringup/: CMakeLists.txt  package.xml
src/bringup/launch/localization/: amcl.launch.xml  gmapping.launch.xml  localization.launch  slam_gmapping.launch
src/bringup/launch/navigation/: full.launch  move_base.launch  navigation.launch
src/bringup/launch/slam/: mapping.launch
src/bringup/maps/: map.pgm
src/bringup/params/localization/: gmapping.yaml
src/bringup/params/navigation/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/core/core/: CMakeLists.txt  package.xml  topics.txt
src/core/joy_base/: CMakeLists.txt  package.xml
src/core/joy_base/launch/: joy.launch
src/core/joy_base/src/: joy_base.py
src/core/scripts/: yolo.py
src/ua_ros_p3dx/p3dx_description/launch/: rviz.launch
src/ua_ros_p3dx/p3dx_description/rviz/: visualization.rviz
src/ua_ros_p3dx/p3dx_description/urdf/: pioneer3dx.gazebo
src/ua_ros_p3dx/p3dx_gazebo/launch/: gazebo.launch
