<?xml version="1.0"?>
<package format="2">
  
    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>core</name>
    <version>0.0.1</version>

    <description>Core Packages</description>
    <maintainer email="core@todo.todo">xd</maintainer>
    <license>TODO</license>
    <buildtool_depend>catkin</buildtool_depend>
    
    <export>
      <metapackage/>
    </export>

</package>

