<?xml version="1.0"?>
<package format="2">
    <!-- 
      <depend>             : build, export, and execution dependencies 
      <build_depend>       : pkgs needed at compile time (any file or library)
      <build_export_depend>: pkgs needed to build libraries against this pkg
      <exec_depend>        : pkgs needed to run this code. (e.g: shared libs)
      <test_depend>        : only additional deps for unit testing (e.g: gtest)
      <doc_depend>         : dependencies for documentation generation

      See also:
      - http://wiki.ros.org/catkin/package.xml
      - http://www.ros.org/reps/rep-0140.html
    -->


    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->

    <name>joy_base</name>
    <version>0.0.1</version>
    
    <description>Contains code for teleoperation</description>

    <!-- team -->
    <maintainer email="joy_base@todo.todo">xd</maintainer>
    <!-- specific developers -->
    


    <license>TODO</license>



    <!-- SYSTEM DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>


    <!-- build, export, and execution dependencies -->
    <depend>joy</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>


    <!-- build dependencies -->


    <!-- export dependencies -->


    <!-- execution dependencies -->
    

    <!-- test dependencies -->


    <!-- documentation dependencies -->


    <export>
    </export>
  
</package>

